# cmd/main.go
@@ -91,7 +91,7 @@ func main() {
 	r.HandleFunc("/api/v1/artists/{id}", artistHandler.GetArtistByID).Methods("GET")
 	r.HandleFunc("/api/v1/artists/{id}/tracks", trackHandler.GetTracksByArtistID).Methods("GET")
 	r.HandleFunc("/api/v1/artists/{id}/albums", albumHandler.GetAlbumsByArtistID).Methods("GET")
-	
+
 	r.HandleFunc("/api/v1/auth/signup", userHandler.Signup).Methods("POST")
 	r.HandleFunc("/api/v1/auth/login", userHandler.Login).Methods("POST")
 	r.HandleFunc("/api/v1/auth/logout", userHandler.Logout).Methods("POST")
@@ -99,8 +99,8 @@ func main() {
 
 	r.HandleFunc("/api/v1/user/{username}/avatar", userHandler.GetUserAvatar).Methods("GET")
 	r.HandleFunc("/api/v1/user/{username}/avatar", userHandler.UploadAvatar).Methods("POST")
-	r.HandleFunc("/api/v1/user/{username}/change", userHandler.ChangeUserData).Methods("POST")
-	r.HandleFunc("/api/v1/user/{username}/delete", userHandler.DeleteUser).Methods("DELETE")
+	r.HandleFunc("/api/v1/user/{username}", userHandler.ChangeUserData).Methods("PUT")
+	r.HandleFunc("/api/v1/user/{username}", userHandler.DeleteUser).Methods("DELETE")
 
 	err = http.ListenAndServe(cfg.Port, r)
 	if err != nil {
